--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,18 +41,11 @@ services:
         volumes:
             - .docker/mysql:/var/lib/mysql
             - .docker/data:/data
-    data_test:
-        container_name: data_test
-        image: debian
-        volumes:
-            - .docker/mysql_test:/var/lib/mysql
-            - .docker/data_test:/data
     logs:
         container_name: logs
         image: debian
         volumes:
             - .docker/logs/nginx:/var/log/nginx
-            - .docker/logs/mongodb:/var/log/mongodb
     mysql:
         container_name: mysql
         restart: always
@@ -60,23 +53,22 @@ services:
         volumes_from:
             - data
             - logs
-        expose:
-            - "3306"
+        ports:
+            - "3307:3306"
         environment:
             MYSQL_DATABASE: homestead
             MYSQL_USER: homestead
             MYSQL_PASSWORD: secret
             MYSQL_ROOT_PASSWORD: root
-    mysql_test:
-        container_name: mysql_test
+    phpmyadmin:
+        container_name: phpmyadmin
+        depends_on:
+            - mysql
+        image: phpmyadmin/phpmyadmin
         restart: always
-        image: mysql
-        volumes_from:
-            - data_test
-        expose:
-            - "3306"
+        ports:
+            - "8080:80"
         environment:
-            MYSQL_DATABASE: homestead_test
-            MYSQL_USER: homestead_test
-            MYSQL_PASSWORD: secret
-            MYSQL_ROOT_PASSWORD: root
+            PMA_ARBITRARY: 1
+            PHA_HOST: mysql
+
