--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,34 +1,32 @@
 server {
+
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
-    root /var/www/laravel/public/;
+
+    server_name localhost;
+    root /var/www/laravel/public;
     index index.php index.html index.htm;
 
-    try_files $uri $uri/ @rewrite;
-
-    location @rewrite {
-        rewrite ^/(.*)$ /index.php?_url=/$1;
+    location / {
+         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # set client body size to 500M #
-    client_max_body_size 500M;
-
-    # Increase buffer size to deal with too long URL (especially on redirect)
-    fastcgi_buffers 8 16k;
-    fastcgi_buffer_size 32k;
-
-    # pass the PHP scripts to FastCGI server listening on the php-fpm socket
     location ~ \.php$ {
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-        if (!-f $document_root$fastcgi_script_name) {
-            return 404;
-        }
-        include fastcgi_params;
+        try_files $uri /index.php =404;
         fastcgi_pass php-upstream;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        fastcgi_param REALPATHTEST $realpath_root;
-        internal;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/letsencrypt/;
+        log_not_found off;
     }
 }
