--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -69,8 +69,13 @@ RUN pecl channel-update pecl.php.net && pecl install mongodb
 RUN echo "extension=mongodb.so" >> /etc/php/7.1/cli/php.ini
 
 # Install Nodejs
-RUN curl -sL https://deb.nodesource.com/setup_7.x | bash - \
-    && apt-get install -y nodejs \
+ENV NODE_VERSION 8.9.4
+ENV NVM_DIR /root/.nvm
+RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh | bash \
+    && . ${NVM_DIR}/nvm.sh \
+    && nvm install ${NODE_VERSION} \
+    && nvm use ${NODE_VERSION} \
+    && nvm alias ${NODE_VERSION} \
     && npm install -g gulp-cli bower eslint babel-eslint eslint-plugin-react yarn
 
 # Install SASS
@@ -81,12 +86,11 @@ RUN apt-get install -y ruby ruby-dev \
 # PHPMetrics, PHPDepend, PHPMessDetector, PHPCopyPasteDetector
 RUN curl -s http://getcomposer.org/installer | php \
     && mv composer.phar /usr/local/bin/composer \
-    && composer global require 'squizlabs/php_codesniffer=2.9' \
+    && composer global require 'squizlabs/php_codesniffer=3.0' \
         'phpmetrics/phpmetrics' \
         'pdepend/pdepend' \
         'phpmd/phpmd' \
-        'sebastian/phpcpd' \
-    && cd ~/.composer/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/
+        'sebastian/phpcpd'
 
 # Create symlink
 RUN ln -s /root/.composer/vendor/bin/phpcs /usr/bin/phpcs \
