update nginx access control allow origin

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,11 +20,45 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
 
+
         # API access.
-        add_header 'Access-Control-Allow-Origin' *;
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT';
-        add_header 'Access-Control-Allow-Headers' 'Version,Accept,Accept-Encoding,Accept-Language,Connection,Coockie,Authorization,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        set $cors "true";
+        if ($request_method = 'OPTIONS') {
+            set $cors "${cors}options";
+        }
+
+        if ($request_method = 'GET') {
+            set $cors "${cors}get";
+        }
+        if ($request_method = 'POST') {
+            set $cors "${cors}post";
+        }
+        if ($request_method = 'PUT') {
+            set $cors "${cors}post";
+        }
+        if ($request_method = 'DELETE') {
+            set $cors "${cors}post";
+        }
+
+        if ($cors = "trueget") {
+            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+            add_header 'Access-Control-Allow-Credentials' 'true';
+        }
+
+        if ($cors = "truepost") {
+            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+            add_header 'Access-Control-Allow-Credentials' 'true';
+        }
+
+        if ($cors = "trueoptions") {
+            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Accept-Encoding,Accept-Language,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since,Version,Connection,Coockie,X-CustomHeader';
+            add_header 'Content-Length' 0;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            return 204;
+        }
     }
 
     location ~ /\.ht {
