--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,65 +8,28 @@ server {
     index index.php index.html index.htm;
 
     location / {
-         try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # set client body size to 500M #
+    client_max_body_size 500M;
+
+    # Increase buffer size to deal with too long URL (especially on redirect)
+    fastcgi_buffers 8 16k;
+    fastcgi_buffer_size 32k;
+
+    # pass the PHP scripts to FastCGI server listening on the php-fpm socket
     location ~ \.php$ {
-        try_files $uri /index.php =404;
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+        if (!-f $document_root$fastcgi_script_name) {
+            return 404;
+        }
+        include fastcgi_params;
         fastcgi_pass php-upstream;
         fastcgi_index index.php;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-
-
-        # API access.
-        set $cors "true";
-        if ($request_method = 'OPTIONS') {
-            set $cors "${cors}options";
-        }
-
-        if ($request_method = 'GET') {
-            set $cors "${cors}get";
-        }
-        if ($request_method = 'POST') {
-            set $cors "${cors}post";
-        }
-        if ($request_method = 'PUT') {
-            set $cors "${cors}post";
-        }
-        if ($request_method = 'DELETE') {
-            set $cors "${cors}post";
-        }
-
-        if ($cors = "trueget") {
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Credentials' 'true';
-        }
-
-        if ($cors = "truepost") {
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Credentials' 'true';
-        }
-
-        if ($cors = "trueoptions") {
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Accept-Encoding,Accept-Language,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since,Version,Connection,Coockie,X-CustomHeader';
-            add_header 'Content-Length' 0;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            return 204;
-        }
-    }
-
-    location ~ /\.ht {
-        deny all;
-    }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/letsencrypt/;
-        log_not_found off;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param REALPATHTEST $realpath_root;
+        internal;
     }
 }
